<resources>
    <string name="app_name">My Application</string>
    <string name="startDiscovery">Start discovery</string>
    <string name="stopDiscovery">Stop discovery</string>
    <string name="pairedDevices">Paired devices</string>
    <string name="discoveredDevices">Discovered devices</string>
    <string name="connected">Connected</string>
    <string name="notConnected">Not connected</string>
    <string name="empty"> </string>
    <string name="eyesFolder">eyes_category</string>
    <string name="mouthsFolder">mouths_category</string>
</resources>